Fix listing title too long issue.

--- a/promowebweb/src/main/webapp/resources/css/app.css
+++ b/promowebweb/src/main/webapp/resources/css/app.css
@@ -102,6 +102,8 @@ table.dataTable td.pic-id img {
 table.dataTable td.item-title p {
 	line-height: 1.3;
 	margin-top: 5px;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
 table.dataTable td.pic-id p {
